# fatigue_criteria_pu

./: 1.Probabilistic_DV_criterion.ipynb  2.1.PU_EM.ipynb  2.2.Experiments.ipynb  2.3.PU_learning_fatigue_results.ipynb  README.md  pyproject.toml
data/: coupons_Fayard.csv
experiments/pu_experiments/5c_2e_0_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  model.pkl  results.json
experiments/pu_experiments/5c_2e_10_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  model.pkl  results.json
experiments/pu_experiments/5c_2e_11_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  model.pkl  results.json
experiments/pu_experiments/5c_2e_12_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  model.pkl  results.json
experiments/pu_experiments/5c_2e_13_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  model.pkl  results.json
experiments/pu_experiments/5c_2e_14_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  model.pkl  results.json
experiments/pu_experiments/5c_2e_15_none_balanced/: DVcresults.json  DVresults.json  base_cresults.json  base_results.json  cresults.json  (+2 more)
src/probabilistic_criterion/: dataset.py
src/pu_criterion/: PU.py  classification.py  dataset.py  experiment.py  non_pu_classification.py  propensity.py  scoring.py  visualisation.py
(+653 files in other folders)
