[tool.poetry]
name = "fatigue-criteria-pu"
version = "0.1.0"
description = ""
authors = ["ocoudray <ocdy96@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.22.2"
pandas = "1.4.1"
scipy = "1.8.0"
matplotlib = "3.5.1"
ipykernel = "6.9.1"
openpyxl = "3.0.9"
jinja2 = "3.0.3"
scikit-learn = "1.0.2"
statsmodels = "0.13.2"
tqdm = "4.62.3"
seaborn = "0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
